--- a/src/www/index.html
+++ b/src/www/index.html
@@ -1,50 +1,33 @@
 <!DOCTYPE html>
-<!--
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
-<html>
+<html lang="de">
     <head>
         <meta charset="utf-8">
-        <!--
-        Customize this policy to fit your own app's needs. For more guidance, please refer to the docs:
-            https://cordova.apache.org/docs/en/latest/
-        Some notes:
-            * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
-            * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
-                * Enable inline JS: add 'unsafe-inline' to default-src
-        -->
         <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
         <meta name="color-scheme" content="light dark">
-        <link rel="stylesheet" href="css/index.css">
-        <title>Hello World</title>
+        <title>Einkochen leicht gemacht</title>
+        <link href="lib/md2.css" rel="stylesheet">
+        <link href="lib/md_icons.css" rel="stylesheet">
+        <link href="lib/bs_icons.css" rel="stylesheet">
+        <link href="lib/roboto.css" rel="stylesheet">
+        <link href="lib/mdc-select.css" rel="stylesheet">
+        <link href="css/global.css" rel="stylesheet">
+        <script src="cordova.js"></script>
+        <script src="lib/md2.js"></script>
+        <script src="lib/jquery.js"></script>
+        <script src="js/index.js"></script>
+        <script src="js/main.js"></script>
+        <!-- TODO: Initalize_JavaScript soll alle Abhängigkeiten laden !-->
+        <!-- TODO: Skript mit webpack in package.json schreiben, dass Aus cordova App ein WebApp baut !-->
+        <!-- TODO: Workflow schreiben !-->
     </head>
     <body>
-        <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
-        </div>
-        <script src="cordova.js"></script>
-        <script src="js/index.js"></script>
+    <div id="app">
+        <!-- TODO: Beim ersten Start Dialog einbauen, der Nutzer über Update informiert, Bestätigung in LocalStorage speichern. Local Storage bleibt erhalten !-->
+    </div>
+
+    <script>mdc.autoInit()</script>
     </body>
 </html>
