BREAKING-CHANGE: Update fruit page to Material 3

--- a/www/pages/obst.html
+++ b/www/pages/obst.html
@@ -1,4 +1,4 @@
-<div class="content" xmlns="http://www.w3.org/1999/html">
+<div class="content">
   <p>Bitte wählen Sie aus, welches Obst Sie einkochen möchten.</p>
   <br>
   <md-outlined-select>
