breaking change: Update Home-Page to Material 3

--- a/www/index.html
+++ b/www/index.html
@@ -10,8 +10,7 @@
         <title>Einkochen leicht gemacht</title>
         <link href="lib/md_icons.css" rel="stylesheet">
         <link href="lib/bs_icons.css" rel="stylesheet">
-        <link href="lib/roboto.css" rel="stylesheet">
-        <link href="lib/mdc-select.css" rel="stylesheet">
+        <link href="lib/font_defs.css" rel="stylesheet">
         <link href="css/global.css" rel="stylesheet">
         <script src="cordova.js"></script>
         <script src="lib/jquery.js"></script>
