--- a/www/pages/home.html
+++ b/www/pages/home.html
@@ -4,21 +4,21 @@
     <p>Bitte wählen Sie aus, welche Art von Lebensmittel Sie einkochen möchten.</p>
     <br>
     <div class="btn-center">
-        <button page="obst" class="mdc-button mdc-button--raised mdc-ripple-upgraded elg-btn home-btn">
-            <span class="mdc-button__ripple"></span> Obst
-        </button><br>
-        <button page="gemuese" class="mdc-button mdc-button--raised mdc-ripple-upgraded elg-btn home-btn">
-            <span class="mdc-button__ripple"></span> Gemüse
-        </button><br>
-        <button page="fleisch" class="mdc-button mdc-button--raised mdc-ripple-upgraded elg-btn home-btn">
-            <span class="mdc-button__ripple"></span> Fleisch
-        </button><br><br>
-        <button page="elg-tipps" class="mdc-button mdc-button--raised mdc-ripple-upgraded elg-btn home-btn">
-            <span class="mdc-button__ripple"></span> Einkochanleitung
-        </button><br>
-        <button page="produkte" class="mdc-button mdc-button--raised mdc-ripple-upgraded elg-btn home-btn">
-            <span class="mdc-button__ripple"></span> Einkochprodukte
-        </button>
+        <md-filled-button page="obst" class="elg-btn">
+            Obst
+        </md-filled-button><br>
+        <md-filled-button page="gemuese" class="elg-btn">
+            Gemüse
+        </md-filled-button><br>
+        <md-filled-button page="fleisch" class="elg-btn">
+            Fleisch
+        </md-filled-button><br><br>
+        <md-filled-button page="elg-tipps" class="elg-btn">
+            Einkochanleitung
+        </md-filled-button><br>
+        <md-filled-button page="produkte" class="elg-btn">
+            Einkochprodukte
+        </md-filled-button>
 
     </div>
 </div>
