fix(vegetables-page): Change text of slider

--- a/www/pages/gemuese.html
+++ b/www/pages/gemuese.html
@@ -4,7 +4,7 @@
     <br>
     <md-outlined-select>
         <md-select-option selected>
-            <div slot="headline">-- Bitte Obstsorte auswählen --</div>
+            <div slot="headline">-- Bitte Gemüse auswählen --</div>
         </md-select-option>
         <md-select-option value="blumenkohl">
             <div slot="headline">
