chore: Change class name

--- a/www/pages/home.html
+++ b/www/pages/home.html
@@ -13,7 +13,7 @@
         <md-filled-button page="fleisch" class="elg-btn">
             Fleisch
         </md-filled-button><br><br>
-        <md-filled-button page="elg-tipps" class="elg-btn">
+        <md-filled-button page="tipps" class="elg-btn">
             Einkochanleitung
         </md-filled-button><br>
         <md-filled-button page="produkte" class="elg-btn">
