fix(product-page): Productlink can now open

--- a/www/pages/produkte.html
+++ b/www/pages/produkte.html
@@ -6,7 +6,7 @@
   max-width:1280px;box-sizing:border-box;}  .title{font-weight:bold;font-size:34.0pt;}  h3{font-weight:normal;font-size:19pt;}  h5{font-weight:normal;font-size:15pt;}  .footer{left:0;bottom:0;width:100%;background-color:white;text-align:center;}  .ZmFzdHBy{font-size:10pt;}</style>
 <div class="content">
   <div class="product">
-    <a onclick="openProductPage('ZWFybGll')">
+    <a product_id="ZWFybGll" class="product_item">
       <div class="card" style="width:18rem;">
         <img alt="Einkochautomaten" class="card-img-top" src="img/products/Einkochautomat.jpg">
         <div class="card-body">
@@ -18,7 +18,7 @@
   </div><br>
 
   <div class="product">
-    <a onclick="openProductPage('c3BlY2ll')">
+    <a product_id="c3BlY2ll" class="product_item">
       <div class="card" style="width:18rem;">
         <img alt="Weck Rundrand-Glas 100 Tulpenform" class="card-img-top" src="img/products/Glas100-2.jpg">
         <div class="card-body">
@@ -29,7 +29,7 @@
   </div><br>
 
   <div class="product">
-    <a onclick="openProductPage('aW5kdXN0')">
+    <a product_id="aW5kdXN0" class="product_item">
       <div class="card" style="width:18rem;">
         <img alt="Weck Rundrand-Glas 100 Hoch" class="card-img-top" src="img/products/Glas100.jpg">
         <div class="card-body">
@@ -40,7 +40,7 @@
   </div><br>
 
   <div class="product">
-    <a onclick="openProductPage('c3R1ZHlp')">
+    <a product_id="c3R1ZHlp" class="product_item">
       <div class="card" style="width:18rem;">
         <img alt="Weck Rundrand-Glas 60" class="card-img-top" src="img/products/Glas60.jpg">
         <div class="card-body">
@@ -51,7 +51,7 @@
   </div><br>
 
   <div class="product">
-    <a onclick="openProductPage('YWdlY29u')">
+    <a product_id="YWdlY29u" class="product_item">
       <div class="card" style="width:18rem;">
         <img alt="Weck Einkochklammern" class="card-img-top" src="img/products/Klammern.jpg">
         <div class="card-body">
@@ -63,7 +63,7 @@
 
 
   <div class="product">
-    <a onclick="openProductPage('Y2hhcHRl')">
+    <a product_id="Y2hhcHRl" class="product_item">
       <div class="card" style="width:18rem;">
         <img alt="Etiketten" class="card-img-top" src="https://m.media-amazon.com/images/I/41RAo+9vWWL._AC_SX425_.jpg">
         <div class="card-body">
