--- a/www/pages/home.html
+++ b/www/pages/home.html
@@ -4,21 +4,21 @@
     <p>Bitte wählen Sie aus, welche Art von Lebensmittel Sie einkochen möchten.</p>
     <br>
     <div class="btn-center">
-        <md-filled-button page="obst" class="elg-btn">
+        <a href="#obst"><md-filled-button page="obst" class="elg-btn">
             Obst
-        </md-filled-button><br>
-        <md-filled-button page="gemuese" class="elg-btn">
+        </md-filled-button></a><br>
+        <a href="#gemuese"><md-filled-button page="gemuese" class="elg-btn">
             Gemüse
-        </md-filled-button><br>
-        <md-filled-button page="fleisch" class="elg-btn">
+        </md-filled-button></a><br>
+        <a href="#fleisch"><md-filled-button page="fleisch" class="elg-btn">
             Fleisch
-        </md-filled-button><br><br>
-        <md-filled-button page="tipps" class="elg-btn">
+        </md-filled-button></a><br><br>
+        <a href="#tipps"><md-filled-button page="tipps" class="elg-btn">
             Einkochanleitung
-        </md-filled-button><br>
-        <md-filled-button page="produkte" class="elg-btn">
+        </md-filled-button></a><br>
+        <a href="#produkte"><md-filled-button page="produkte" class="elg-btn">
             Einkochprodukte
-        </md-filled-button>
+        </md-filled-button></a>
 
     </div>
 </div>
