feat(vegetables-page): Add Affiliatelink to cucumber product

--- a/www/pages/gemuese.html
+++ b/www/pages/gemuese.html
@@ -81,6 +81,7 @@
     <div id="details" class="hidden">
         <p>Temperatur:&nbsp;<span id="temperatur"></span>&nbsp;°C</p><br>
         <p>Zeit:&nbsp;<span id="zeit"></span>&nbsp;min</p><br>
-        <p class="notice" id="notice"></p>
+        <p class="notice" id="notice"></p><br>
+        <div id="productLink" class="btn-center"></div>
     </div>
 </div>
