chore: Change update dialog

--- a/www/pages/home.html
+++ b/www/pages/home.html
@@ -30,10 +30,12 @@
         Die App wurde auf eine neue Version aktualisiert.<br>
         Die Neuerungen:<br>
         <ul>
-            <li>App farbenfroher gestaltet</li>
-            <li>Schriftart geändert</li>
-            <li>Die App funktioniert nun komplett ohne Internet</li>
-            <li>Probleme behoben</li>
+            <li>Redesign der App</li>
+            <li>Modernere Schrift mit besserer Lesbarkeit</li>
+            <li>Zuckermengen bei Obst reduziert</li>
+            <li>Hinweis bei Äpfeln hinzugefügt</li>
+            <li>keine Internetabhängigkeit mehr</li>
+            <li>Allgemeine Probleme behoben</li>
         </ul>
     </form>
     <div slot="actions">
