chore: Update release notes

--- a/www/pages/home.html
+++ b/www/pages/home.html
@@ -35,6 +35,7 @@
             <li>Zuckermengen bei Obst reduziert</li>
             <li>Hinweis bei Äpfeln hinzugefügt</li>
             <li>keine Internetabhängigkeit mehr</li>
+            <li>Update auf Android 14</li>
             <li>Allgemeine Probleme behoben</li>
         </ul>
     </form>
